@@ -6,6 +6,7 @@ Bug tracker at http://code.google.com/p/psutil/issues
 NEW FEATURES
 
  * Issue #52: (Linux, Windows) get process environment variables.
+ * Issue #209: psutil.disk_partitions() now provides also mount options.
  * Issue #229: list users currently connected on the system (psutil.get_users()).
  * Issue #238: (Linux, Windows) process CPU affinity (get and set).
  * Issue #242: Process.get_children(recursive=True): return all process
